--- a/app/views/gallaries/_gallary.html.erb
+++ b/app/views/gallaries/_gallary.html.erb
@@ -1,13 +1,13 @@
-<div class="container-fluid">  
+<div class="container-fluid pg">  
   <div class="row">
       <div class="tabbable">
       <ul class="nav nav-tabs">
         <li class="active" data-value="picnic"><a href="#tab11" data-toggle="tab">Picnic</a></li>
         <li data-value="innogration"><a href="#tab12" data-toggle="tab">Innogration</a></li>
-        <li data-value="birthday"><a href="#tab13" data-toggle="tab">Birthday</a></li>        
+        <li data-value="birthday"><a href="#tab13" data-toggle="tab">Birthday</a></li>     
       </ul>
 
-      <div class="tab-content prof-colr">      
+      <div class="tab-content gallry-colr">      
         <div class="tab-pane active" id="tab11">
           <div class="gal">          
           <% @gallary_picnic.each do |gallary| %>          
