--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,7 @@
  *= require prettyPhoto
  *= require email
  *= require style
+ *= require fullcalendar
  *= require_tree.
  */
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300,100);
